@@ -1,3 +1,7 @@
+* Thu May 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Include gsexec, a drop-in replacement for suexec,
+  which can do suexec execution of CGI programs or
+  pool-account mapping based on client DN.
 * Tue May 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - ==== GridSite version 1.1.9 ====
 * Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
